Avoid use of Class.newInstance()